--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore node_modules in both client and server
 client/node_modules/
 server/node_modules/
-node_modules/
+node_modules
 
 # Ignore build output
 client/dist/
@@ -10,3 +10,10 @@ build/
 
 # Ignore environment variables
 .env
+
+cython_constraint.txt
+python-tts/py38venv
+python-tts/cython_constraint.txt
+python-tts/__pycache__
+python-tts/speech.wav
+
