--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "server",
+  "name": "audiobook-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
